--- a/index.html
+++ b/index.html
@@ -8,31 +8,33 @@
     <script src="https://kit.fontawesome.com/87b8ddf09b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <section>
-        <form>
-            <h1>Login</h1>
-            <div class="input-box">
-                <i class="fa-solid fa-user icon"></i>
-                <input type="text" required>
-                <label>Username</label>
-            </div>
-            <div class="input-box">
-                <i class="fa-solid fa-lock icon"></i>
-                <input type="password" required>
-                <label>Password</label>
-            </div>
-            <div class="forget">
-                <label for=""><input type="checkbox">Remember Me</label>
-              <a href="#">Forgot Password?</a>
-            </div>
-            <button>Log in</button>
-            <div class="register">
-                <p>Don't have a account? <a href="#">Register</a></p>
-            </div>
-        </form>
-    </section>
-    <footer>
-        <p>My Github <i class="fa-brands fa-github" style="margin: 6px;"></i><a href="https://github.com/Viny7Lv" target="_blank">VinyLv</a></p>
-    </footer>
+    <main class="container">
+        <section>
+            <form>
+                <h1>Login</h1>
+                <div class="input-box">
+                    <i class="fa-solid fa-user icon"></i>
+                    <input type="text" required>
+                    <label>Username</label>
+                </div>
+                <div class="input-box">
+                    <i class="fa-solid fa-lock icon"></i>
+                    <input type="password" required>
+                    <label>Password</label>
+                </div>
+                <div class="forget">
+                    <label for=""><input type="checkbox">Remember Me</label>
+                  <a href="#">Forgot Password?</a>
+                </div>
+                <button>Log in</button>
+                <div class="register">
+                    <p>Don't have a account? <a href="#">Register</a></p>
+                </div>
+            </form>
+        </section>
+        <footer>
+            <p>My Github <i class="fa-brands fa-github" style="margin: 6px;"></i><a href="https://github.com/Viny7Lv" target="_blank">VinyLv</a></p>
+        </footer>
+    </main>
 </body>
 </html>
